# chip-8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: chip8.cpp  chip8.h  main.cpp
